fix header z-index

--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -1,5 +1,6 @@
 .Header {
   position: relative;
+  z-index: 1;
 
   &__shape {
     position: relative;
